# amodem

./: .bumpversion.cfg  .gitignore  .pylintrc  .travis.yml  INSTALL.md  LICENSE  README-GPG.md  README-SSH.md  README.md  README.rst  __main__.py  agent  agent.py  agent_bash  amodem-cli  auto-calib.sh  calib.py  calibrate.py  colorhash.py  common.py  config.py  constellation.py  drift.py  ecc.py  errors.py  loop.py  loop.sh  pll.py  profile.sh  pyproject.toml  recv.py  release.sh  requirements.txt  sampling.py  send.py  setup.py  show.py  sigproc.py  stream.py  test.sh  (+10 more)
amodem/: __init__.py  __main__.py  alsa.py  async.py  async_reader.py  audio.py  calib.py  common.py  config.py  detect.py  drift.py  dsp.py  ecc.py  equalizer.py  errors.py  framing.py  levinson.py  loop.py  lsdev.py  main.py  profiling.py  qam.py  recv.py  rs_codec.py  sampling.py  sd.py  send.py  show.py  sigproc.py  stream.py  train.py  version.py  wave.py
contrib/: neopg-trezor
doc/: DESIGN.md  INSTALL.md  README-GPG.md  README-NeoPG.md  README-PINENTRY.md  README-SSH.md  README-age.md  enigmail.md
gpg/: check.py  decode.py  demo.sh  git_gpg_wrapper.py  signer.py  util.py
libagent/: __init__.py  formats.py  protocol.py  server.py  util.py
scripts/: amodem  ashow  audio  auto-calib.sh  autocalib.sh  calib.py  calibrate  configure.py  gpg-agent  gpg-init  gpg-shell  modem.py  play.sh  plot.py  profile.sh  record  record.py  record.sh  recv.py  resample.py  send.py  show.py  test.sh  transfer.sh  wave.py
sshagent/: __main__.py  formats.py  protocol.py  server.py  trezor.py  trezor_agent.py  (+1 more)
(+166 files in other folders)
